# xer-lang

./: CMakeLists.txt  example.xer  syntax.txt
src/: main.c
src/parse/: parser.c  parser.h
src/token/: keywords.c  keywords.h  tokenizer.c  tokenizer.h
src/util/: misc.c  misc.h  stretchy.c  stretchy.h  strintern.c  strintern.h
